# commonsense-firewall-pro

./: .gitignore  README.md  __init__.py  danger_precomputer.py  data_loader.py  engine.py  graph_engine.py  pyproject.toml  pytest.ini  reasoner.py  semantic_embedder.py
tests/: __init__.py  test_engine.py  test_engine.py.bak-20260119-114130  test_engine.py.bak_20260119_115524
